--- a/views/pages/tradeSelectionPage.ejs
+++ b/views/pages/tradeSelectionPage.ejs
@@ -11,6 +11,7 @@
 <body onload="tradeSelectionPageSetUp()">
 
     <%- include ("../partials/aio_dld_header.ejs") %>
+    <%- include ("../partials/aio_dld_popups.ejs") %>
 
     <h1 class="title">Trade Selection</h1>
     <p class="subtitle">Select cards to send/request</p>
