--- a/views/pages/tradeSelectionPage.ejs
+++ b/views/pages/tradeSelectionPage.ejs
@@ -22,7 +22,7 @@
         <div id="initiatorCards" class="tradeSelectionTable">
             <h3>Owned Cards</h3>
             <table id="initiatorCardsTable" class="cardTable" style="height: 90%;">
-                <td class="noMatchMessage" hidden="true">No Cards</td>
+                <tr style="background-color: var(--bg)"><td class="noMatchMessage" hidden="true">No Cards</td></tr>
             </table>
         </div>
 
@@ -38,7 +38,7 @@
                 <div id="offeredCards" class="tradeSelectionTable" style="height: 100%; width: 50%;">
                     <h3>Offer</h3>
                     <table id="offeredCardsTable" class="cardTable" style="height: 90%;">
-                        <td class="noMatchMessage">No Cards</td>
+                        <tr style="background-color: var(--bg)"><td class="noMatchMessage">No Cards</td></tr>
                     </table>
                 </div>
 
@@ -46,7 +46,7 @@
                 <div id="wantedCards" class="tradeSelectionTable" style="height: 100%; width: 50%;">
                     <h3>Request</h3>
                     <table id="wantedCardsTable" class="cardTable" style="height: 90%;">
-                        <td class="noMatchMessage">No Cards</td>
+                        <tr style="background-color: var(--bg)"><td class="noMatchMessage">No Cards</td></tr>
                     </table>
                 </div>
             </div>
@@ -56,7 +56,7 @@
         <div id="receiverCards" class="tradeSelectionTable">
             <h3>Trader's Cards</h3>
             <table id="receiverCardsTable" class="cardTable" style="height: 90%;">
-                <td class="noMatchMessage" hidden="true">No Cards</td>
+                <tr style="background-color: var(--bg)"><td class="noMatchMessage" hidden="true">No Cards</td></tr>
             </table>
         </div>
     </div>
