--- a/views/partials/aio_dld_popups.ejs
+++ b/views/partials/aio_dld_popups.ejs
@@ -58,6 +58,13 @@ hidden="true">
     </table>
 </div>
 
+<!--trade selection card info-->
+<!-- use to display cards info in /tradeSelection-->
+<div class="popup" id="tradeSelectionInfoPopUp" onmouseup="showCardDetails(event, true)" hidden="true">
+    <iframe style="width: 60%; height: 60%; left: 5%; display:block; margin:10%; top: 0.1%;" class="popupContents cardTable" id="tradeSelectionCardViewer" hidden="true">
+    </iframe>
+</div>
+
 <!--help-->
 <div class="popup" id="helpPagePopUp" onmouseup="help(true)" hidden="true">
     <div class="popupContents" style="padding-top:1%; overflow: hidden; width: fit-content; height: fit-content; margin: 20%; bottom: 0%; right: 0%;">
