--- a/views/partials/aio_dld_row_templates.ejs
+++ b/views/partials/aio_dld_row_templates.ejs
@@ -11,9 +11,9 @@
         <td class="id">ID</td>
         <td class="username">Name</td>
         <td class="password">Pass</td>
-        <td class="buttonContainer" onclick="toggleTable(false,'Owned Cards', event,'user')">Cards</td>
-        <td class="buttonContainer" onclick="toggleTable(false,'Friends', event,'user')">Friends</td>
-        <td class="buttonContainer" onclick="toggleTable(false,'Ongoing Trades', event,'user')">Trades</td>
+        <td class="buttonContainer" onclick="toggleTable(false,'Owned Cards', event,'user')"><button>Cards</button></td>
+        <td class="buttonContainer" onclick="toggleTable(false,'Friends', event,'user')"><button>Friends</button></td>
+        <td class="buttonContainer" onclick="toggleTable(false,'Ongoing Trades', event,'user')"><button>Trades</button></td>
         <td class="type">Type</td>
         <td class="buttonContainer" onclick="deleteUser(event)">X</td>
     </tr>
@@ -26,7 +26,7 @@
         <td class="senderId">Sender ID</td>
         <td class="receiverId">Receiver ID</td>
         <td class="buttonContainer" onclick="toggleTable(false,'Trade Cards', event,'trade')">Cards</td>
-        <td>
+        <td style="padding: 0%;">
             <select class="tradeStatus" onchange="changeTradeStatus(event)">
                 <option value="PENDING">PENDING</option>
                 <option value="REJECTED">REJECTED</option>
