--- a/public/stylesheets/deckBuilder.css
+++ b/public/stylesheets/deckBuilder.css
@@ -1,3 +1,9 @@
+input {
+    margin-left: 1%;
+    float: right;
+    padding: 1%;
+}
+
 .horizontalAlignContainer{
     display: flex;
     flex-direction: row;
@@ -18,8 +24,17 @@
 }
 
 .deckBuilderTable{
-    width: 45%;
+    width: 44.5vw; /*Five cards worth */
     height: inherit;
+}
+
+.cardTable tbody{
+    background-color: var(--bg);
+    overflow-y: visible;
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-columns: repeat(5, 1fr);
 }
 
 .card{
@@ -28,7 +43,7 @@
     padding-top: 100%;
 }
 
-.quantity {
+.value, .quantity {
     background-color: white;
     float: right;
     clear: right;
@@ -36,19 +51,16 @@
     width: auto;
     height: auto;
     margin: 0;
-}
-
-.value {
-    background-color: white;
-    float: right;
-    clear: right;
-    padding: 1%;
-    width: auto;
-    height: auto;
-    margin: 0;
+    background-color: var(--fg_highlight);
+    color: var(--txt);
+    border-radius: 5px;
+    padding: 3%;
 }
 
 h3{
     height: 10%;
-    margin:0px;
+    width: 5%;
+    float: left;
+    margin: 0.5%;
+    color: white;
 }
