--- a/views/pages/deckBuilder.ejs
+++ b/views/pages/deckBuilder.ejs
@@ -36,7 +36,14 @@
             <table id="extraDeckCardsTable" class="cardTable" style="height: auto; width: 44.5vw;">
                 <tbody></tbody>
             </table>
+            <button id="testHand" type="button" onclick="drawTestHand()">Test Hand</button>
             <button id="saveDeck" type="button" onclick="saveDeck()">Save Deck</button>
+            <div id="testHand" hidden="true">
+                <h3 style="width: 100%;">Test Hand</h3>
+                <table id="testHandCardsTable" class="cardTable" style="height: auto; width: 35.6vw;" >
+                    <tbody></tbody>
+                </table>
+            </div>
         </div>
     </div>
 
