--- a/views/pages/cardInfo.ejs
+++ b/views/pages/cardInfo.ejs
@@ -25,7 +25,7 @@
     </head>
     <body>
         <h1 style="text-align:center"><%=cardInfo.name%></h1>
-        <img src= "../<%=cardInfo.image%>", alt="<%=cardInfo.name%>" style="display:block; margin:auto">
+        <img src= "/<%=cardInfo.image%>", alt="<%=cardInfo.name%>" style="display:block; margin:auto">
         <ul>
             <li>Pack name: <%=cardInfo.box_name%></li>
             <li>
