--- a/public/stylesheets/deckSelector.css
+++ b/public/stylesheets/deckSelector.css
@@ -1,15 +1,16 @@
-.horizontalAlignContainer{
-    display: flex;
-    flex-direction: row;
-    justify-content: top;
-    align-items: top;
+.decksListContainer{
     width: 98%;
     height: 60vh;
     margin: 1%;
 }
 
+#newDeckButton {
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+
 #decksTable {
-    width: auto;
+    width: 44.5vw;
     height: 100%;
     margin-bottom: 5%;
 }
