deck selector css (no highlight on hover)

--- a/public/stylesheets/deckSelector.css
+++ b/public/stylesheets/deckSelector.css
@@ -20,6 +20,10 @@ tr {
     grid-template-columns: repeat(5, 1fr);
 }
 
+tr:hover{
+    background-color: var(--bg);
+}
+
 .cardTable tbody{
     overflow-y: visible;
 }
