--- a/views/pages/deckBuilder.ejs
+++ b/views/pages/deckBuilder.ejs
@@ -21,19 +21,22 @@
     <div class="horizontalAlignContainer">
         <div id="collection" class="deckBuilderTable">
             <h3>Collection</h3>
-            <table id="collectionCardsTable" class="cardTable" style="height: auto; width: 44.5vw;">
+            <table id="collectionCardsTable" class="cardTable" style="height: auto;">
                 <tbody></tbody>
             </table>
         </div>
+
+            <img id="largeImage" src="/images/1.jpg" alt="">
+       
     
         <div id="deck" class="deckBuilderTable">
             <h3>Deck</h3>
             <input type="text" id="deckName" value="<%- deck.name %>" placeholder="Name Deck">
-            <table id="deckCardsTable" class="cardTable" style="height: auto; width: 44.5vw;">
+            <table id="deckCardsTable" class="cardTable" style="height: auto;">
                 <tbody></tbody>
             </table>
             <h3>Extra Deck</h3>
-            <table id="extraDeckCardsTable" class="cardTable" style="height: auto; width: 44.5vw;">
+            <table id="extraDeckCardsTable" class="cardTable" style="height: auto;">
                 <tbody></tbody>
             </table>
             <button id="testHand" type="button" onclick="drawTestHand()">Test Hand</button>
