--- a/views/pages/pack-nav.ejs
+++ b/views/pages/pack-nav.ejs
@@ -3,25 +3,26 @@
     <head>
         <title>Box Selection</title>
         <!-- <link rel="stylesheet" href="/../../stylesheets/main.css"> -->
+        <link rel="stylesheet" href="/../../stylesheets/packOpener.css">
     </head>
 
     <body>
         <div class="Content">
             <%- include ("../partials/aio_dld_header.ejs") %>
 
-            <h1>Box Selection</h1>
+            <h1 align="center">Box Selection</h1>
             
-            <form action="/box/1" method="get">
-                <input type="submit" value="The Ultimate Rising">
+            <form action="/box/1" align="center" method="get">
+                <input class="select" type="submit" value="The Ultimate Rising">
             </form> <br>
-            <form action="/box/2" method="get">
-                <input type="submit" value="Age Of Discovery">
+            <form action="/box/2" align="center" method="get">
+                <input class="select" type="submit" value="Age Of Discovery">
             </form> <br>
-            <form action="/box/3" method="get">
-                <input type="submit" value="Neo-Impact">
+            <form action="/box/3" align="center" method="get">
+                <input class="select" type="submit" value="Neo-Impact">
             </form> <br>
-            <form action="/box/4" method="get">
-                <input type="submit" value="Flame Of The Tyrant">
+            <form action="/box/4" align="center" method="get">
+                <input class="select" type="submit" value="Flame Of The Tyrant">
             </form> <br>
             
 
