--- a/views/pages/pack-opener.ejs
+++ b/views/pages/pack-opener.ejs
@@ -21,12 +21,12 @@
 
             <div class="columnLeft">
                 <form action="/box/<%= num %>/open" method="get">
-                    <input type="submit" value="New Pack">
+                    <input class="opener" type="submit" value="New Pack">
                 </form> 
             </div>
             <div class="columnRight">
                 <form action="/box/<%= num %>/reset" method="get">
-                    <input type="submit" value="Reset Box">
+                    <input class="opener" type="submit" value="Reset Box">
                 </form>
             </div>
             
