--- a/views/partials/aio_dld_header.ejs
+++ b/views/partials/aio_dld_header.ejs
@@ -49,6 +49,9 @@
     #headerButton:hover {
         background-color: #1c6fc7;
     }
+    #headerButton:active {
+        transform: translateY(5%);
+    }
     #navBar {
         padding-top: 0%;
         /* padding-left: 10px;
@@ -71,8 +74,12 @@
     #navButton:hover {
         background-color: #095486;
     }
+    #navButton:active {
+        transform: translateY(5%);
+    }
     label {
         color: white;
+        font-family: Arial, sans-serif;
     }
     hr {
         border: 1px solid black;
