--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/stylesheets/main.css"/>
     <title>Welcome to AIO DLD</title>
 </head>
 
