big card now defaults to card back

--- a/views/pages/deckBuilder.ejs
+++ b/views/pages/deckBuilder.ejs
@@ -26,7 +26,7 @@
             </table>
         </div>
 
-            <img id="largeImage" src="/images/1.jpg" alt="">
+        <img id="largeImage" src="/images/card_back.jpg" alt="">
        
     
         <div id="deck" class="deckBuilderTable">
