added card images to pack opener

--- a/views/pages/pack-opener.ejs
+++ b/views/pages/pack-opener.ejs
@@ -12,10 +12,22 @@
             <h1 id="boxname"><%= name %></h1>
 
             Packs Left: <%= packsleft %><br><br>
-
-            Card1: <%= card1.name %><br>
-            Card2: <%= card2.name %><br>
-            Card3: <%= card3.name %><br> 
+        
+            <% if(card1 == 0) { %>
+                Card #1:<br>
+                <img src="/images/card_back.jpg"><br>
+                Card #2:<br>
+                <img src="/images/card_back.jpg"><br>
+                Card #3:<br>
+                <img src="/images/card_back.jpg"><br>
+            <% } else { %>
+                Card #1: <%= card1.name %><br>
+                <img src=<%= card1.image %>><br>
+                Card #2: <%= card2.name %><br>
+                <img src=<%= card2.image %>><br>
+                Card #3: <%= card3.name %><br> 
+                <img src=<%= card3.image %>><br>
+            <% } %>
             
             <br>
 
