fixed invalid img in pack opener

--- a/views/pages/pack-opener.ejs
+++ b/views/pages/pack-opener.ejs
@@ -22,11 +22,11 @@
                 <img src="/images/card_back.jpg"><br>
             <% } else { %>
                 Card #1: <%= card1.name %><br>
-                <img src=<%= card1.image %>><br>
+                <img src="/images/<%= card1.image %>"><br>
                 Card #2: <%= card2.name %><br>
-                <img src=<%= card2.image %>><br>
+                <img src="/images/<%= card2.image %>"><br>
                 Card #3: <%= card3.name %><br> 
-                <img src=<%= card3.image %>><br>
+                <img src="/images/<%= card3.image %>"><br>
             <% } %>
             
             <br>
