Standardized size of cards in pack opener

--- a/views/pages/pack-opener.ejs
+++ b/views/pages/pack-opener.ejs
@@ -26,16 +26,16 @@
                 </form>
             </div>
 
-            <br>
+            <br> <br> <br>
         
             <% if(card1 == 0) { %>
-                <img src="/images/card_back.jpg"><br>
-                <img src="/images/card_back.jpg"><br>
-                <img src="/images/card_back.jpg"><br>
+                <img src="/images/card_back.jpg" width="40%">
+                <img src="/images/card_back.jpg" width="40%">
+                <img src="/images/card_back.jpg" width="40%">
             <% } else { %>
-                <img src=/<%= card1.image %>><br>
-                <img src=/<%= card2.image %>><br>
-                <img src=/<%= card3.image %>><br>
+                <img src=/<%= card1.image %> width="40%">
+                <img src=/<%= card2.image %> width="40%">
+                <img src=/<%= card3.image %> width="40%">
             <% } %>
         </div>
 
